prototype/_sass/components/_osc.scss
#osc {
	color: silver;
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	background: #333332 url(stars.svg) no-repeat;
	-moz-background-size: auto 100% ;
	-webkit-background-size: auto 100% ;
	background-size: auto 100% ;
	// padding-top: 2.5%;
	padding-bottom: 2.5%;

	-moz-transition: left 0.5s;
	-webkit-transition: left 0.5s;
	transition: left 0.5s;

	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;

	#organisation-logo {
		padding: 4% 4%;
		text-align: center;
		position: absolute;
		left: 6%;
		bottom: 4%;
		right: 6%;
		background: white;
		border-radius: 0.8em;

		img {
			max-width: 90%;
			max-height: 100px;
		}

		@media screen and (max-height: 480px) {
			display: none;
		}

		&.native {
			background: none transparent;
			opacity: 0.5;

			&:hover {
				opacity: 1;
			}

			figure {
				width: 110px;
				margin: 0 auto;
				display: block;

				figcaption {
					color: white;
					font-size: 0.8em;
					line-height: 1.2em;
				}

				img {
					max-height: 1000px;
					width: 100%;
					max-width: 100%;
				}
			}
		}
	}

	a {
		color: white;
	}

	#osc-header {
		padding: 0.7rem 2% 0.7rem 2%;
		margin-bottom: 2em;
		height: 3rem;

		#button-sessions {
			max-width: 70%;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
		}

		border-bottom: solid 1px black;
		
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;

		.icon-cog,
		.icon-plus-circle {
			float: right;
			line-height: 1.8em;
			margin-left: 0.5em;
		}
	}
}

@include screen-size(small) {
	#osc {
		width: 90%;
		// overflow: auto;
	}

	.osc-on #osc {
		left: 0;
	}

	.osc-off #osc {
		left: -90%;
	}
}

@include screen-size(medium) {
	#osc {
		width: 40%;
	}

	.osc-on #osc {
		left: 0;
	}

	.osc-off #osc {
		left: -40%;
	}
}

@include screen-size(large) {
	#osc {
		width: 25%;
	}

	.osc-on #osc {
		left: 0;
	}

	.osc-off #osc {
		left: -25%;
	}
}

